--- a/style.css
+++ b/style.css
@@ -41,9 +41,11 @@ button {
   -o-transition: all 0.5s;
   transition: all 0.5s;
   cursor: pointer;
+  outline: none;
 }
 
 button:hover {
   color: #222;
   border-color: #222;
 }
+
