--- a/style.css
+++ b/style.css
@@ -14,16 +14,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
   width: auto;
   height: 100%;
 }
 
-div {
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%, -50%); */
-}
+
 
 button {
   /* background-color: #333; */
@@ -48,4 +45,5 @@ button:hover {
   color: #222;
   border-color: #222;
 }
+
 
