Added a script to change the text and button border color from black to white depending on how to dark the background is for easier readability. Quick fix not a great solution.

--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ button {
   padding: 20px;
   margin: 5px;
   width: 200px;
-  -webkit-transition: all 0.5s;
+  /* -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
-  transition: all 0.5s;
+  transition: all 0.5s; */
   cursor: pointer;
   outline: none;
 }
